k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xiantang-blog
spec:
  selector:
    app: xiantang-blog
  ports:
    - port: 80
      targetPort: 80
